# capsule-telegram

./: Capsule.toml  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  telegram.rs
